# local-RAG-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEVELOPER.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.json
.github/workflows/: docker-publish.yml
.qlty/: qlty.toml
fixtures/ingest/: README.md
mcp_server/: .dockerignore  .env.example  Dockerfile  README.md  graphiti_mcp_server.py  mcp_config_sse_example.json  pyproject.toml
mcp_server/config/: config.yaml
mcp_server/src/: graphiti_mcp_server.py
scripts/: analyze_api_calls.py  build-mcp-server.sh  container-build.sh  container-publish.sh  neo4j-init.cypher  neo4j-init.sh
src/: __init__.py
src/adapter/: __init__.py  chunk_file_manager.py  entity_cache.py  filesystem_document_reader.py  graphiti_episode_repository.py  logging_utils.py  rate_limit_coordinator.py  rate_limit_retry_handler.py  unstructured_document_parser.py
src/domain/: __init__.py  chunk.py  document.py  episode.py  group_id.py
src/main/: __init__.py  ingest.py  settings.py
src/repository/: __init__.py
src/usecase/: __init__.py  register_document_usecase.py
tests/adapter/: __init__.py  test_entity_cache.py  test_filesystem_document_reader.py  test_graphiti_episode_repository.py  test_rate_limit_coordinator.py  test_rate_limit_retry_handler.py  test_unstructured_document_parser.py
tests/domain/: __init__.py  test_chunk.py  test_document.py  test_episode.py  test_group_id.py
tests/main/: __init__.py  test_ingest.py  (+1 more)
(+10 files in other folders)
