[project]
name = "local-rag-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shinichi Suwa", email = "suwash01@gmail.com" }
]
dependencies = [
    "unstructured[all-docs]>=0.17.2",
    "numpy<2.0", # numpy 2.0 is not compatible with unstructured
    "graphiti-core>=0.12.0",
    "python-dotenv>=1.1.0",
    "mcp>=1.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/local_rag_backend"]
