[project]
name = "local-rag-backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Shinichi Suwa", email = "suwash01@gmail.com" }
]
dependencies = [
    "unstructured[all-docs]>=0.23.1",
    "graphiti-core>=0.29.2",
    "python-dotenv>=1.2.2",
    "mcp>=1.28.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/local_rag_backend"]
